less/colors.less
/* ... */
.footer .row {
    background: #202225;
}
.CODOFORUM .codo_forum_title {line-height: 38px;
    color: #ddd !important;
}
.CODOFORUM .global_search i {
    color: #ddd;
}
.codo_menu_dropdown {
    color: #ddd;
}
.CODOFORUM .codo_inline_notifications>i {
    color: #ddd;
}
.CODOFORUM .codo_menu_user .codo_user_name_span {
    color: #ddd;
}
.CODOFORUM .codo_pmx_link i {
    color: #ddd;
}
.codo_topics 
.codo_topics_head 
.codo_topics_start_button_div 
.codo_topics_start_button {
    color: #fff;
    background-color: #202225;
    border-color: #dfdfdf;
}
.codo_topics 
.codo_topics_head 
.codo_topics_start_button_div 
.codo_topics_start_button:hover {
    color: #202225;
    border-color: #202225;
}
.container .codo_topic {
    border-radius: 0px;
}
.CODOFORUM .navbar {
    min-height: 40px;
    max-height: 60px;
}
.CODOFORUM .navbar-clean {
    background: #202222;
    box-shadow: 0 1px 1px darkgrey;
}
.codo_post_statistics 
.icon-eye2, 
.codo_recent_post_stats 
.icon-eye2 {
    color: #d03c43;
}

body {
    background-attachment: fixed !important;
    background: #1a1d1f url(/board/sites/default/themes/cutebutevil/img/background.jpg) no-repeat center top;
    background-size: 100%;
    font-weight: 560;
    line-height: 1.6;
}

.codo_topics .codo_topics_head {
    height: 100px;
    background: #1a1d1f url(/board/sites/default/themes/cutebutevil/img/cbehead.jpg) no-repeat center top;
}

.codo_topics .codo_topics_body>div>article>.codo_topics_topic_foot {
    text-shadow: none
}

.CODOFORUM .nav>li>a {
    color: #ffffff;
    background-color: #202222;
}

.nav-tabs .nav-link {
    border: 0px;
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
}

.navbar-light .navbar-nav .nav-link {
    color: #f1f1f1;
}

.navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
    color: #888;
}

.bg-white {
    background-color: #202222 !important;
}

.codo_icon_header>div {
    background: #d03c43;
}

.navbar-toggler {
    background-color: #d03c43;
}

.oembedall-container img, .oembedall-container div {
    cursor: pointer;
    width: 100%;
    height: auto;
}

.CODOFORUM .codo_forum_title {
    text-shadow: 0 0 4px #9e1d1d, 0 0 6px #ecc146;
}

.codo_topics .codo_topics_body>div>article {
    background: #202225;
    -webkit-transition: 1s border linear;
    -moz-transition: 1s border linear;
    -o-transition: 1s border linear;
    transition: 1s border linear;
    border-bottom: 1px solid #dc9165;
}

.codo_topics .codo_topics_body>div>article>.codo_topics_topic_message {
    color: #c5bba7;
}

.codo_topics .codo_topics_body>div>article>.codo_topics_topic_content>.codo_topics_topic_name>span {
    color: #ababab;
}

body {
    font-weight: 450;
    color: #6c757d;
}

.codo_topics .codo_topics_body>div>article>.codo_topics_topic_content>.codo_topics_topic_name>a {
    color: #adadad;
}

.codo_topics .codo_topics_body>div>article>.codo_topics_topic_content>.codo_topics_topic_title>a {
    color: #ccc;
}



.codo_topics .codo_topics_body > div > article .codo_posts_post_moderation i {
    color: #ababab;
}

.codo_categories .codo_categories_category a {
    color: #c5bba7;
}

.codo_categories #codo_categories_ul {
    background: #202225;
}

.codo_categories .codo_categories_category {
    background: #202225;
}

.codo_categories .codo_categories_category .codo_category_num_topics {
    background-color: #383636;
}

.codo_categories .codo_categories_category .codo_category_title_header {
    font-size: 15px;
    text-transform: uppercase;
}

.codo_categories .row {
    background-color: #202225;
}

.codo_categories #codo_categories_ul ul li:last-child:before {
    background: #202225;
}

.codo_categories .codo_sidebar_fixed .codo_sidebar_settings {
    background: #202225;
    border: 1px solid #666;
}

.codo_categories .codo_sidebar_fixed .codo_sidebar_navigation>button {
    color: #c5bba7;
    background: #202225;
    border: 1px solid #666;
}

.form-control {
    color: #c5bba7;
    background-color: #202225;
    border: 1px solid #555;
}

.codo_topics_loadmore_div {
    background-color: #202225;
    box-shadow: 3px 1px 3px #dc9165;
}

.codo_topics .codo_topics_body>div>article>.codo_topics_topic_content>.codo_topics_topic_title>a:hover{
    color: #dcc3b7;
}

.card {
    background-color: #202225;
    border: 1px solid #555;
}

.profile-user-statistics-right-inner {
    background: #202225;
}

.container .codo_topic {
    text-shadow: none;
    color: #c5bba7;
    background-color: #202225;
}

container .codo_topic .codo_notification_block>.codo_notification_block_desc {
    color: #c5bba7;
}

.container .codo_topic .codo_notification_block > .codo_notification_block_slider label {
    color: #c5bba7;
}

.codo_cat_num>div {
    color: #c5bba7;
}

.container .codo_posts>.codo_widget>.codo_widget-content>article {
    background-color: #202225;
    border-bottom: 1px solid #dcc3b7;
}


.container .codo_posts > .codo_widget > .codo_widget-content > article .codo_posts_user_info>.codo_posts_post_name>a {
    color: #c5bba7;
    font-weight: bold;
}

.container .codo_posts>.codo_widget>.codo_widget-content>article>.codo_posts_post_content>.codo_posts_post_message {
    color: #c5bba7;
}

.container .codo_posts > .codo_widget > .codo_widget-content > article .codo_posts_post_moderation i {
    color: #c5bba7;
}

.codo_topics_body > article .codo_topics_topic_message {
    color: #c5bba7;
}

.codo_topics_body>article>.codo_topics_topic_content>.codo_topics_topic_title {
    color: #ccc;
}

.codo_tabs .codo_tabs_content {
    background: #202225;
}

.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
    color: #c5bba7;
    background-color: #202225;
}

.codo_categories .codo_sub_categories_txt {
    color: #c5bba7;
    border-bottom: 1px solid #555;
}

.codo_categories .codo_sub_categories {
    background: #202225;
}

.codo_categories .codo_notification_block>.codo_notification_block_desc {
    color: #c5bba7;
}
/* ... */

